# PyCausalImpact

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requeriments.txt  requirements.txt
.github/workflows/: ci.yml
docs/: README.md
docs/examples/: basic_usage.ipynb  basic_usage.py  tfp_multiple_inference.ipynb
pycausalimpact/: __init__.py  core.py  reporting.py  requirements.txt  utils.py
pycausalimpact/models/: __init__.py  base.py  prophet.py  sktime.py  statsmodels.py  tfp.py
tests/: conftest.py  test_adapters_contract.py  test_core.py  test_integration_causalimpact.py  test_intervals.py  test_models.py  test_optional_backends.py  test_reporting.py  test_tfp_adapter.py
