[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycausalimpact"
version = "0.1.0"
description = "Library for estimating causal impact on time series using pluggable forecasting models."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "PyCausalImpact Developers" }]
keywords = [
  "causal inference",
  "time series",
  "forecasting",
  "impact evaluation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.20",
  "pandas>=1.2",
  "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/pycausalimpact/PyCausalImpact"
Documentation = "https://github.com/pycausalimpact/PyCausalImpact/tree/main/docs"
Source = "https://github.com/pycausalimpact/PyCausalImpact"
Issues = "https://github.com/pycausalimpact/PyCausalImpact/issues"

[project.optional-dependencies]
# Optional backends (install only what you need)
statsmodels = ["statsmodels>=0.13,<0.15"]

prophet = [
  "prophet>=1.1,<1.2",
  "cmdstanpy>=1.2",          # Prophet backend; may compile CmdStan in CI
]

sktime = [
  "sktime>=0.28,<0.39",
  "scikit-learn>=1.3,<1.7",  # Compatible range; 1.7.x doesn't exist yet
]

tfp = [
  "pytest>=7,<9",
  "statsmodels>=0.13,<0.15",
  "tensorflow>=2",
  "tensorflow-probability>=0.25",
  "tf_keras==2.19.0"
]

# Full integration testing set (heavy). CI can `pip install .[test]`.
test = [
  "pytest>=7,<9",
  "statsmodels>=0.13,<0.15",
  "prophet>=1.1,<1.2",
  "cmdstanpy>=1.2",
  "sktime>=0.28,<0.39",
  "scikit-learn>=1.3,<1.7",
  "tensorflow==2.19.0",
  "tensorflow-probability==0.25.0",
  "tf_keras==2.19.0"
]

# Dev conveniences (optional)
dev = [
  "pre-commit",
  "black",
  "flake8",
  "pytest>=7,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pycausalimpact"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
